[Sing] new Top10 screen

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Millors 5
 SING_TOP_5_CHARTS_CONTINUE=A la selecció de cançóns
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Escollir dificultat
 
+SING_TOP_10_CHARTS=Millors 10 jugadors
+
 POPUP_PERFECT=Perfecte!
 POPUP_AWESOME=Genial!
 POPUP_GREAT=Molt bo!
