--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Top 5
 SING_TOP_5_CHARTS_CONTINUE=Laulu valiku juurde
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Vaheta raskustaset
 
+SING_TOP_10_CHARTS=Top 10 mängijat
+
 POPUP_PERFECT=Täiuslik!
 POPUP_AWESOME=Imeline!
 POPUP_GREAT=Suurepärane!
