--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Meilleurs joueurs
 SING_TOP_5_CHARTS_CONTINUE=Continuer
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Changer de difficulté
 
+SING_TOP_10_CHARTS=Top 10
+
 POPUP_PERFECT=Parfait !
 POPUP_AWESOME=Cool !
 POPUP_GREAT=Génial !
