--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Na 5 as fhearr
 SING_TOP_5_CHARTS_CONTINUE=Gu taghadh an òrain
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Atharraich an duilgheadas
 
+SING_TOP_10_CHARTS=Na 10 cluicheadairean as fhearr
+
 POPUP_PERFECT=foirfe!
 POPUP_AWESOME=sgoinneil!
 POPUP_GREAT=sin thu!
