--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Top 5
 SING_TOP_5_CHARTS_CONTINUE=Odabir pjesme
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Switch difficulty
 
+SING_TOP_10_CHARTS=Top 10 Igrača
+
 POPUP_PERFECT=Izvanredno!
 POPUP_AWESOME=Predivno!
 POPUP_GREAT=Odlično!
