--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Bescht Spiller
 SING_TOP_5_CHARTS_CONTINUE=Weider
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Schwieregkeetsgrad
 
+SING_TOP_10_CHARTS=Top 10
+
 POPUP_PERFECT=Perfekt!
 POPUP_AWESOME=Chill!
 POPUP_GREAT=Gäil!
