--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Top 5
 SING_TOP_5_CHARTS_CONTINUE=Continuar para a seleção das canções
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Trocar de dificuldade
 
+SING_TOP_10_CHARTS=10 Melhores Jogadores
+
 POPUP_PERFECT=Perfeito!
 POPUP_AWESOME=Fantástico!
 POPUP_GREAT=Ótimo!
