--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Top 5
 SING_TOP_5_CHARTS_CONTINUE=Pre výber skladby
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Prepnúť obtiažnosť
 
+SING_TOP_10_CHARTS=Najlepších 10
+
 POPUP_PERFECT=Neskutočné!
 POPUP_AWESOME=Paráda!
 POPUP_GREAT=Super!
