--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Najboljših 5
 SING_TOP_5_CHARTS_CONTINUE=K izbiri pesmi
 ;TODO: SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Switch difficulty
 
+SING_TOP_10_CHARTS=Najboljših 10 pevcev
+
 POPUP_PERFECT=Popolno!
 POPUP_AWESOME=Odlicno!
 POPUP_GREAT=Zelo dobro!
