--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=5 parasta
 SING_TOP_5_CHARTS_CONTINUE=Kappleen valintaan
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Vaihda vaikeustasoa
 
+SING_TOP_10_CHARTS=10 parasta laulajaa
+
 POPUP_PERFECT=Upeaa!
 POPUP_AWESOME=Mahtavaa!
 POPUP_GREAT=Hienoa!
