--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -355,6 +355,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Topp 5
 SING_TOP_5_CHARTS_CONTINUE=í lagaval
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Breyta erfiðleikastigi
 
+SING_TOP_10_CHARTS=Topp 10 leikmenn
+
 POPUP_PERFECT=Fullkomið!
 POPUP_AWESOME=æðislegt!
 POPUP_GREAT=Frábært!
