--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -352,7 +352,9 @@ SING_SCORE_ULTRASTAR=ウルトラ・スター
 SING_TOP_5_CHARTS=トップ５プレイヤー
 SING_TOP_5_CHARTS_WHEREAMI=トップ５
 SING_TOP_5_CHARTS_CONTINUE=曲選択へ
-SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=switch difficulty
+;TODO: SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=switch difficulty
+
+;TODO: SING_TOP_10_CHARTS=Top 10 players
 
 POPUP_PERFECT=完璧！
 POPUP_AWESOME=すごい！
