--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=五佳玩家
 SING_TOP_5_CHARTS_CONTINUE=到歌曲选择
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=转换难度
 
+;TODO: SING_TOP_10_CHARTS=Top 10 players
+
 POPUP_PERFECT=完美浮现！
 POPUP_AWESOME=牛逼哄哄！
 POPUP_GREAT=值得表扬！
