--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Top 5
 SING_TOP_5_CHARTS_CONTINUE=Til Sang Valg
 ;TODO: SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Switch difficulty
 
+SING_TOP_10_CHARTS=Top 10 Spillere
+
 POPUP_PERFECT=Perfekt!
 POPUP_AWESOME=Utroligt!
 POPUP_GREAT=Meget Godt!
