--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Top 5
 SING_TOP_5_CHARTS_CONTINUE=Zur Songauswahl
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Schwierigkeitsstufen
 
+SING_TOP_10_CHARTS=Top-10-Spieler
+
 POPUP_PERFECT=Perfekt!
 POPUP_AWESOME=Cool!
 POPUP_GREAT=Toll!
