--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Top 5
 SING_TOP_5_CHARTS_CONTINUE=To song selection
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Switch difficulty
 
+SING_TOP_10_CHARTS=Top 10 players
+
 POPUP_PERFECT=Perfect!
 POPUP_AWESOME=Awesome!
 POPUP_GREAT=Great!
