--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Los 5 mejores
 SING_TOP_5_CHARTS_CONTINUE=A selección de canción
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Cambiar dificultad
 
+SING_TOP_10_CHARTS=Los 10 mejores
+
 POPUP_PERFECT=Perfecto
 POPUP_AWESOME=Increíble
 POPUP_GREAT=Estupendo
