--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=5 hoberenak
 SING_TOP_5_CHARTS_CONTINUE=Abestia aukeratu
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=switch difficulty
 
+SING_TOP_10_CHARTS=10 hoberenak
+
 POPUP_PERFECT=Bikain!
 POPUP_AWESOME=Txundigarri!
 POPUP_GREAT=Sekulakoa!
