--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Os 5 mellores
 SING_TOP_5_CHARTS_CONTINUE=A selección de canción
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Cambiar dificultade
 
+SING_TOP_10_CHARTS=Os 10 mellores
+
 POPUP_PERFECT=Perfecto!
 POPUP_AWESOME=Abraiante!
 POPUP_GREAT=Xenial!
