--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Migliori 5
 SING_TOP_5_CHARTS_CONTINUE=Continua
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Cambia difficoltà
 
+SING_TOP_10_CHARTS=Punteggio primi 10 Giocatori
+
 POPUP_PERFECT=Perfetto!
 POPUP_AWESOME=Stupendo!
 POPUP_GREAT=Grande!
