--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Top 5
 SING_TOP_5_CHARTS_CONTINUE=Parinkti dainą
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Perjungti sunkumus
 
+SING_TOP_10_CHARTS=10 geriausi žaidėjai
+
 POPUP_PERFECT=puikus
 POPUP_AWESOME=nuostabu
 POPUP_GREAT=didelis
