--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Legjobb 5
 SING_TOP_5_CHARTS_CONTINUE=Szám kiválasztás
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Nehézségi szintválasztás
 
+SING_TOP_10_CHARTS=Legjobb 10 játékos
+
 POPUP_PERFECT=Hibátlan!
 POPUP_AWESOME=Bámulatos!
 POPUP_GREAT=Nagyszerű!
