--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Top 5
 SING_TOP_5_CHARTS_CONTINUE=Ga Verder
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Switch difficulty
 
+SING_TOP_10_CHARTS=Top 10 Spelers
+
 POPUP_PERFECT=Perfect!
 POPUP_AWESOME=Ongelooflijk!
 POPUP_GREAT=Fantastisch!
