--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Topp 5
 SING_TOP_5_CHARTS_CONTINUE=Til sangvalg
 ;TODO: SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Switch difficulty
 
+SING_TOP_10_CHARTS=Topp 10 spillere
+
 POPUP_PERFECT=Perfekt!
 POPUP_AWESOME=Fantastisk!
 POPUP_GREAT=Kjempebra!
