--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Najlepszych 5
 SING_TOP_5_CHARTS_CONTINUE=Do wyboru piosenek
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Zmień trudność
 
+SING_TOP_10_CHARTS=Najlepszych 10 graczy
+
 POPUP_PERFECT=Idealnie!
 POPUP_AWESOME=Wspaniale!
 POPUP_GREAT=Świetnie!
