--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=лучшие 5
 SING_TOP_5_CHARTS_CONTINUE=к выбору песни
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=сменить сложность
 
+SING_TOP_10_CHARTS=10 лучших
+
 POPUP_PERFECT=прекрасно!
 POPUP_AWESOME=удивительно!
 POPUP_GREAT=великолепно!
