--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Primii 5
 SING_TOP_5_CHARTS_CONTINUE=La alegerea cântecului
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Schimbă dificultatea
 
+SING_TOP_10_CHARTS=Primii 10 jucători
+
 POPUP_PERFECT=Perfect!
 POPUP_AWESOME=Uimitor!
 POPUP_GREAT=Grozav!
