--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Topp 5
 SING_TOP_5_CHARTS_CONTINUE=Till låtval
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=byt svårighetsgrad
 
+SING_TOP_10_CHARTS=Topp 10 Spelare
+
 POPUP_PERFECT=Perfekt!
 POPUP_AWESOME=Storartat!
 POPUP_GREAT=Riktigt bra!
