--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=5 nej
 SING_TOP_5_CHARTS_CONTINUE=Na výběr skladby
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Přepnout obtížnost
 
+SING_TOP_10_CHARTS=10 nejlepších
+
 POPUP_PERFECT=Výborně!
 POPUP_AWESOME=Paráda!
 POPUP_GREAT=Super!
