--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Τοπ 5
 SING_TOP_5_CHARTS_CONTINUE=Στην επιλογή τραγουδιού
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=switch difficulty
 
+SING_TOP_10_CHARTS=Οι καλύτεροι 10 παίχτες
+
 POPUP_PERFECT=Τέλεια!
 POPUP_AWESOME=Φανταστικά!
 POPUP_GREAT=Πολύ καλά!
