--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -354,6 +354,8 @@ SING_TOP_5_CHARTS_WHEREAMI=Najboljih pet
 SING_TOP_5_CHARTS_CONTINUE=Do izbora pesme
 ;TODO: SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Switch difficulty
 
+SING_TOP_10_CHARTS=Najboljih 10 Igraca
+
 POPUP_PERFECT=Savrseno!
 POPUP_AWESOME=Odlicno!
 POPUP_GREAT=Sjajno!
