Remove top5 translations

--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -5,8 +5,8 @@ LANGUAGE_ISO_CODE=gl
 SING_LOADING=Cargando...
 SING_LOADING_SONGS=Cargando cancións do cartafol %s
 
-SING_SING=Canta!
-SING_SING_DESC=Xogo rápido: Cantar só ou acompañado
+SING_SING=Canta
+SING_SING_DESC=Cantar só ou acompañado
 
 SING_MULTI=Festa
 SING_MULTI_DESC=Cantar nunha festa ou en grupos
@@ -349,10 +349,7 @@ SING_SCORE_LEAD_SINGER=Cantante
 SING_SCORE_SUPERSTAR=Super cantante
 SING_SCORE_ULTRASTAR=Toda unha estrela
 
-SING_TOP_5_CHARTS=Os 5 mellores
-SING_TOP_5_CHARTS_WHEREAMI=Os 5 mellores
-SING_TOP_5_CHARTS_CONTINUE=A selección de canción
-SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Cambiar dificultade
+SING_TOP_10_CHARTS=Os 10 mellores
 
 POPUP_PERFECT=Perfecto
 POPUP_AWESOME=Incrible
