replace preview volume by song volume

--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -112,7 +112,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Música de fondo
 SING_OPTIONS_SOUND_CLICK_ASSIST=Click en notas
 SING_OPTIONS_SOUND_BEAT_CLICK=Metrónomo
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Ganancia
-SING_OPTIONS_SOUND_PREVIEWVOLUME=Previsualización do volume
+;TODO: SING_OPTIONS_SOUND_SONGVOLUME=Song volume
 SING_OPTIONS_SOUND_PREVIEWFADING=Desvanecer audio
 
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Escoita a túa voz
@@ -120,7 +120,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC=Escoita a música de fondo
 SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Escoitar click en cada nota
 SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Escoitar o click do tempo
 SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Normalizar o volume das cancións
-SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Axustar o volumen na selección de cancións
+;TODO: SING_OPTIONS_SOUND_SONGVOLUME_DESC=Adjust the volume of the songs
 SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Desvanecer o son ao cambiar de canción
 
 OPTION_VALUE_GAIN_SOFT=Pouca
