--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -112,7 +112,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Tausta musiikki
 SING_OPTIONS_SOUND_CLICK_ASSIST=Klikkausapuri
 SING_OPTIONS_SOUND_BEAT_CLICK=Biitti klikkaaja
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music gain
-SING_OPTIONS_SOUND_PREVIEWVOLUME=Esikatselutaso
+;TODO: SING_OPTIONS_SOUND_SONGVOLUME=Song volume
 SING_OPTIONS_SOUND_PREVIEWFADING=Esikatselufeidaus
 
 ;TODO: SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Listen to your voice
@@ -120,7 +120,7 @@ SING_OPTIONS_SOUND_PREVIEWFADING=Esikatselufeidaus
 ;TODO: SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Listen to click on each note
 ;TODO: SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Listen to tempo click
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Normalize songs volume
-;TODO: SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Adjust volume in song selection
+;TODO: SING_OPTIONS_SOUND_SONGVOLUME_DESC=Adjust the volume of the songs
 ;TODO: SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Fade out audio when changing songs
 
 ;TODO: OPTION_VALUE_GAIN_SOFT=Soft
