--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -112,7 +112,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Taustamuusika
 SING_OPTIONS_SOUND_CLICK_ASSIST=Kliki abi korral
 SING_OPTIONS_SOUND_BEAT_CLICK=Häälebiit
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Muusika võimendus
-SING_OPTIONS_SOUND_PREVIEWVOLUME=Eelvaatusel volüüm
+;TODO: SING_OPTIONS_SOUND_SONGVOLUME=Song volume
 SING_OPTIONS_SOUND_PREVIEWFADING=Eelvaatusel volüüm kaob
 
 ;TODO: SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Listen to your voice
@@ -120,7 +120,7 @@ SING_OPTIONS_SOUND_PREVIEWFADING=Eelvaatusel volüüm kaob
 ;TODO: SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Listen to click on each note
 ;TODO: SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Listen to tempo click
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Normalize songs volume
-;TODO: SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Adjust volume in song selection
+;TODO: SING_OPTIONS_SOUND_SONGVOLUME_DESC=Adjust the volume of the songs
 ;TODO: SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Fade out audio when changing songs
 
 OPTION_VALUE_GAIN_SOFT=Lihtne
