--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -112,7 +112,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Música de fondo
 SING_OPTIONS_SOUND_CLICK_ASSIST=Clic en notas
 SING_OPTIONS_SOUND_BEAT_CLICK=Activar metrónomo
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Ganancia
-SING_OPTIONS_SOUND_PREVIEWVOLUME=Volumen vista previa
+SING_OPTIONS_SOUND_SONGVOLUME=Volumen de las canciones
 SING_OPTIONS_SOUND_PREVIEWFADING=Desvanecer audio
 
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Escuchar tu voz
@@ -120,7 +120,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC=Escuchar la música de fondo
 SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Escuchar clic en cada nota
 SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Escuchar el clic del tempo
 SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Normalizar el volumen de las canciones
-SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Ajustar el volumen en selección de canción
+SING_OPTIONS_SOUND_SONGVOLUME_DESC=Ajustar el volumen de las canciones
 SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Desvanecer sonido al cambiar de canción
 
 OPTION_VALUE_GAIN_SOFT=Poca
