--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -112,7 +112,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Podkład muzyczny
 SING_OPTIONS_SOUND_CLICK_ASSIST=Pomoc kliknięciami
 SING_OPTIONS_SOUND_BEAT_CLICK=Kliknięcia w rytm
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Przyrost muzyki
-SING_OPTIONS_SOUND_PREVIEWVOLUME=Głośność w podglądzie
+;TODO: SING_OPTIONS_SOUND_SONGVOLUME=Song volume
 SING_OPTIONS_SOUND_PREVIEWFADING=Zanikanie w podglądzie
 
 ;TODO: SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Listen to your voice
@@ -120,7 +120,7 @@ SING_OPTIONS_SOUND_PREVIEWFADING=Zanikanie w podglądzie
 ;TODO: SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Listen to click on each note
 ;TODO: SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Listen to tempo click
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Normalize songs volume
-;TODO: SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Adjust volume in song selection
+;TODO: SING_OPTIONS_SOUND_SONGVOLUME_DESC=Adjust the volume of the songs
 ;TODO: SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Fade out audio when changing songs
 
 ;TODO: OPTION_VALUE_GAIN_SOFT=Soft
