--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -112,7 +112,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Música de Fundo
 SING_OPTIONS_SOUND_CLICK_ASSIST=Clique de Ajuda
 SING_OPTIONS_SOUND_BEAT_CLICK=Clique de Batida
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Ganho da música
-SING_OPTIONS_SOUND_PREVIEWVOLUME=Vol. da pré-visualização
+;TODO: SING_OPTIONS_SOUND_SONGVOLUME=Song volume
 SING_OPTIONS_SOUND_PREVIEWFADING=Desvanecimento do som
 
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Ouvir a pópria voz
@@ -120,7 +120,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC=Ouvir música de fundo
 SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Ouvir clique em cada nota
 SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Ouvir o clique de tempo
 SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Normalizar volume das canções
-SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Ajustar volume na seleção de canções
+;TODO: SING_OPTIONS_SOUND_SONGVOLUME_DESC=Adjust the volume of the songs
 SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Desvanecer som ao trocar de canções
 
 OPTION_VALUE_GAIN_SOFT=Fraco
