Update German translation
Added German translation of new strings

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -1,4 +1,4 @@
-﻿[Text]
+[Text]
 LANGUAGE=Deutsch
 LANGUAGE_ISO_CODE=de
 
@@ -112,7 +112,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Hintergrundmusik
 SING_OPTIONS_SOUND_CLICK_ASSIST=Klick-Unterstützung
 SING_OPTIONS_SOUND_BEAT_CLICK=Klicken im Takt
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Normalisierung
-;TODO: SING_OPTIONS_SOUND_SONGVOLUME=Song volume
+SING_OPTIONS_SOUND_SONGVOLUME=Song-Lautstärke
 SING_OPTIONS_SOUND_PREVIEWFADING=Ausblenden i. d. Vorschau
 
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Eigene Stimme wiedergeben
@@ -120,7 +120,7 @@ SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC=Hintergrundmusik wiedergeben
 SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Klick bei jeder Note wiedergeben
 SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Tempoklick wiedergeben
 SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Lautstärke der Songs angleichen
-;TODO: SING_OPTIONS_SOUND_SONGVOLUME_DESC=Adjust the volume of the songs
+SING_OPTIONS_SOUND_SONGVOLUME_DESC=Lautstärke der Songs anpassen
 SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Musik ausblenden beim Songwechsel
 
 OPTION_VALUE_GAIN_SOFT=Sanft
