Translate default option

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Groc
 C_CONTINUE=Continuar
 C_CREATEDBY=Creat per
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Dificultat
 C_DUET=Duet
