--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Gelb
 C_CONTINUE=Fortsetzen
 C_CREATEDBY=Erstellt von
 
+;TODO: C_DEFAULT=Default
 C_DELETE_USER=User löschen
 C_DIFFICULTY=Schwierigkeit
 C_DUET=Duett
