--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Yellow
 C_CONTINUE=Continue
 C_CREATEDBY=Created by
 
+C_DEFAULT=Default
 C_DELETE_USER=Delete user
 C_DIFFICULTY=Difficulty
 C_DUET=Duet
