--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Amarillo
 C_CONTINUE=Continuar
 C_CREATEDBY=Creado por
 
+C_DEFAULT=Predeterminado
 C_DELETE_USER=Borrar usuario
 C_DIFFICULTY=Dificultad
 C_DUET=Dueto
