--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Jaune
 C_CONTINUE=Continuer
 C_CREATEDBY=Créée par
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Difficulté
 C_DUET=Duo
