--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Amarelo
 C_CONTINUE=Continuar
 C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 C_DELETE_USER=Eliminar usuario
 C_DIFFICULTY=Dificultade
 C_DUET=Dueto
