--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Sárga
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Nehézségi Szint
 ;TODO: C_DUET=Duet
