--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Amarelo
 C_CONTINUE=Continuar
 C_CREATEDBY=Criada por
 
+;TODO: C_DEFAULT=Default
 C_DELETE_USER=Eliminar utilizador
 C_DIFFICULTY=Dificuldade
 C_DUET=Dueto
