--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Gul
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Sværhedsgrad
 ;TODO: C_DUET=Duet
