--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Kollane
 C_CONTINUE=Jätka
 C_CREATEDBY=Koostatud
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Raskustase
 C_DUET=Duett
