--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Horia
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Zailtasuna
 ;TODO: C_DUET=Duet
