--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Žuta boja
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Težina
 ;TODO: C_DUET=Duet
