--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Geltonas
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 ;TODO: C_DIFFICULTY=Difficulty
 ;TODO: C_DUET=Duet
