--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Giel
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Schwieregkeet
 ;TODO: C_DUET=Duet
