--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -676,6 +676,7 @@ C_COLOR=Цвет
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Сложность
 ;TODO: C_DUET=Duet
