--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=Žltá
 C_CONTINUE=Pokračovať
 C_CREATEDBY=Vytvoril(a)
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Obtiažnosť
 C_DUET=Duet
