--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -677,6 +677,7 @@ C_COLOR_YELLOW=Gulur
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=Erfiðleikastig
 ;TODO: C_DUET=Duet
