--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -676,6 +676,7 @@ C_COLOR=色
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=面倒
 ;TODO: C_DUET=Duet
