--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -676,6 +676,7 @@ C_COLOR_YELLOW=黄
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DEFAULT=Default
 ;TODO: C_DELETE_USER=Delete user
 C_DIFFICULTY=难度
 ;TODO: C_DUET=Duet
